--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -12,4 +12,4 @@ jobs:
         # PAGES_BRANCH: gh-pages
         # BUILD_DIR: .
         # BUILD_FLAGS: --drafts
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.PAT }}
